--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "clickhouse": "^2.6.0",
+    "@clickhouse/client": "^0.0.12",
     "express": "^4.18.2",
+    "kafkajs": "^2.2.4",
     "moment": "^2.29.4",
     "mongodb": "^5.0.1",
+    "nodemailer": "^6.9.1",
+    "numeral": "^2.0.6",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.13.0",
+    "pdfmake": "^0.2.7",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
