--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@clickhouse/client": "^0.0.12",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "kafkajs": "^2.2.4",
     "moment": "^2.29.4",
