--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "kafkajs": "^2.2.4",
+    "lightship": "^8.0.2",
     "moment": "^2.29.4",
     "mongodb": "^5.0.1",
     "nodemailer": "^6.9.1",
