fix:: fix health check path

--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -3,7 +3,7 @@ name: Build Docker Image
 on:
   push:
     branches:
-      - develop
+      - releases
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: smlsoft/dedemerchantapireport
