--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ MAIL_HOST=in-v3.mailjet.com
 MAIL_PORT=587
 MAIL_USER=b2df5aa9f49e7a5e97ea88036158266d
 MAIL_PASS=f4c4d6b7ea6cf9c311c0fceccc7f935f
+
+API_PROVIDER=https://api.dedepos.com
