--- a/.env
+++ b/.env
@@ -10,3 +10,16 @@ MAIL_HOST=in-v3.mailjet.com
 MAIL_PORT=587
 MAIL_USER=b2df5aa9f49e7a5e97ea88036158266d
 MAIL_PASS=f4c4d6b7ea6cf9c311c0fceccc7f935f
+
+MONGO_URI=192.168.2.49:27017
+MONGO_DB_NAME=smldev
+MONGO_TLS=false
+MONGO_CA_FILENAME=./ca-certificate.crt
+
+POSTGRES_HOST=178.128.55.234
+POSTGRES_PORT=5533
+POSTGRES_DB_NAME=dedeposdev
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=XnDLdWQnU4jBnR
+POSTGRES_SSL_MODE=disable
+POSTGRES_LOGGER_LEVEL=debug
