--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -1,9 +1,6 @@
 
 name: Build Docker Image
-on:
-  push:
-    branches:
-      - release
+on: [workflow_dispatch]
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: smlsoft/dedemerchantapireport
