--- a/.env
+++ b/.env
@@ -13,9 +13,9 @@ MAIL_PASS=f4c4d6b7ea6cf9c311c0fceccc7f935f
 
 API_PROVIDER=https://api.dedepos.com
 
-MONGO_URI=192.168.2.49:27017
-MONGO_DB_NAME=smldev
-MONGO_TLS=false
+MONGO_URI=mongodb+srv://doadmin:8Lpfn6203W4U51XK@db-mongodb-sgp1-pos-356fc016.mongo.ondigitalocean.com/?ssl=true
+MONGO_DB_NAME=smldevdb
+MONGO_TLS=true
 MONGO_CA_FILENAME=./ca-certificate.crt
 
 POSTGRES_HOST=178.128.55.234
