Change Clickhouse Environment

--- a/.env
+++ b/.env
@@ -1,11 +1,13 @@
-DB_HOST=http://192.168.2.49:18123
 PORT=3345
-DB_USER=smlchdb
-DB_PASS=smlchdb
-DB=dede001
+
+CH_DB_HOST=http://103.212.36.91:18123
+CH_DB_USER=smlchdb
+CH_DB_PASS=heiR5XpDMyn4
+CH_DB_NAME=dede001
 
 
 BROKERS=192.168.2.49:9093
+
 MAIL_HOST=in-v3.mailjet.com
 MAIL_PORT=587
 MAIL_USER=b2df5aa9f49e7a5e97ea88036158266d
