fix:: change env name

--- a/.env
+++ b/.env
@@ -1,10 +1,9 @@
 PORT=3345
 
-CH_DB_HOST=http://103.212.36.91:18123
-CH_DB_USER=smlchdb
-CH_DB_PASS=heiR5XpDMyn4
-CH_DB_NAME=dede001
-
+CH_SERVER_ADDRESS=http://103.212.36.91:18123
+CH_USERNAME=smlchdb
+CH_PASSWORD=heiR5XpDMyn4
+CH_DATABASE_NAME=dede001
 
 BROKERS=192.168.2.49:9093
 
@@ -15,10 +14,10 @@ MAIL_PASS=f4c4d6b7ea6cf9c311c0fceccc7f935f
 
 API_PROVIDER=https://api.dedepos.com
 
-MONGO_URI=mongodb+srv://doadmin:8Lpfn6203W4U51XK@db-mongodb-sgp1-pos-356fc016.mongo.ondigitalocean.com/?ssl=true
-MONGO_DB_NAME=smldevdb
-MONGO_TLS=true
-MONGO_CA_FILENAME=./ca-certificate.crt
+MONGODB_URI=mongodb+srv://doadmin:8Lpfn6203W4U51XK@db-mongodb-sgp1-pos-356fc016.mongo.ondigitalocean.com/?ssl=true
+MONGODB_DB=smldevdb
+MONGODB_SSL=true
+MONGODB_TLS_CA_FILE=./ca-certificate.crt
 
 POSTGRES_HOST=178.128.55.234
 POSTGRES_PORT=5533
