--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "pdfkit": "^0.13.0",
     "pdfmake": "^0.2.7",
     "pg": "^8.11.0",
+    "redis": "^4.6.7",
+    "snoowrap": "^1.23.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
     "uuid": "^9.0.0"
