get shopid from redis

--- a/.env
+++ b/.env
@@ -26,3 +26,5 @@ POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=XnDLdWQnU4jBnR
 POSTGRES_SSL_MODE=disable
 POSTGRES_LOGGER_LEVEL=debug
+
+REDIS_URL=redis://192.168.2.49:6379
