--- a/.env
+++ b/.env
@@ -27,4 +27,4 @@ POSTGRES_PASSWORD=XnDLdWQnU4jBnR
 POSTGRES_SSL_MODE=disable
 POSTGRES_LOGGER_LEVEL=debug
 
-REDIS_URL=redis://192.168.2.49:6379
+REDIS_CACHE_URI=redis://192.168.2.49:6379
