--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
     "kafkajs": "^2.2.4",
     "lightship": "^8.0.2",
     "moment": "^2.29.4",
@@ -30,7 +31,8 @@
     "snoowrap": "^1.23.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
