--- a/.env
+++ b/.env
@@ -27,4 +27,4 @@ POSTGRES_PASSWORD=XnDLdWQnU4jBnR
 POSTGRES_SSL_MODE=disable
 POSTGRES_LOGGER_LEVEL=debug
 
-REDIS_CACHE_URI=redis://192.168.2.49:6379
+REDIS_CACHE_URI=redis://default:AVNS_dhilsnrZwup9NhqL8GQ@db-redis-sgp1-13586-do-user-11230406-0.b.db.ondigitalocean.com:25061
