--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ MAIL_PASS=f4c4d6b7ea6cf9c311c0fceccc7f935f
 API_PROVIDER=https://api.dedepos.com
 
 MONGODB_URI=mongodb+srv://doadmin:8Lpfn6203W4U51XK@db-mongodb-sgp1-pos-356fc016.mongo.ondigitalocean.com/?ssl=true
-MONGODB_DB=dedepos
+MONGODB_DB=smldevdb
 MONGODB_SSL=true
 MONGODB_TLS_CA_FILE=./ca-certificate.crt
 
