--- a/.env
+++ b/.env
@@ -29,3 +29,5 @@ POSTGRES_LOGGER_LEVEL=debug
 
 REDIS_CACHE_URI=redis://default:AVNS_dhilsnrZwup9NhqL8GQ@db-redis-sgp1-13586-do-user-11230406-0.b.db.ondigitalocean.com:25061
 REDIS_CACHE_TLS_ENABLE=true
+
+LOG_LEVEL=debug
