fix:: fix postgres ssl connect

--- a/.env-example
+++ b/.env-example
@@ -19,15 +19,13 @@ MONGODB_DB=smldevdb
 MONGODB_SSL=true
 MONGODB_TLS_CA_FILE=./ca-certificate.crt
 
-POSTGRES_URI=postgresql://doadmin:wLFPdtmO5m0m7gNi@db-postgresql-sgp1-pos-do-user-11230406-0.b.db.ondigitalocean.com:25060/dedepos_dev?sslmode=no-verify
-POSTGRES_HOST=db-postgresql-sgp1-pos-do-user-11230406-0.b.db.ondigitalocean.com
-POSTGRES_PORT=25060
-POSTGRES_DB_NAME=dedepos_dev
-POSTGRES_USERNAME=doadmin
-POSTGRES_PASSWORD=wLFPdtmO5m0m7gNi
-POSTGRES_SSL_MODE=no-verify
+POSTGRES_HOST=178.128.55.234
+POSTGRES_PORT=5533
+POSTGRES_DB_NAME=dedeposdev
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=XnDLdWQnU4jBnR
+POSTGRES_SSL_MODE=disable
 POSTGRES_LOGGER_LEVEL=debug
-POSTGRES_TLS_CA_FILE=/Users/sutee/DEV/CA/db-postgresql-sgp1-pos-do-user-11230406-0-ca-certificate.crt
 
 REDIS_CACHE_URI=redis://default:AVNS_dhilsnrZwup9NhqL8GQ@db-redis-sgp1-13586-do-user-11230406-0.b.db.ondigitalocean.com:25061
 REDIS_CACHE_TLS_ENABLE=true
