--- a/.env-example
+++ b/.env-example
@@ -24,8 +24,8 @@ POSTGRES_PORT=5533
 POSTGRES_DB_NAME=dedeposdev
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=XnDLdWQnU4jBnR
-POSTGRES_SSL_MODE=disable
-POSTGRES_LOGGER_LEVEL=debug
+POSTGRES_SSL_MODE=no
+#POSTGRES_LOGGER_LEVEL=debug
 
 REDIS_CACHE_URI=redis://default:AVNS_dhilsnrZwup9NhqL8GQ@db-redis-sgp1-13586-do-user-11230406-0.b.db.ondigitalocean.com:25061
 REDIS_CACHE_TLS_ENABLE=true
