--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@clickhouse/client": "^0.0.12",
     "axios": "^1.4.0",
+    "bull": "^4.12.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
