--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app --host 0.0.0.0",
-    "dev": "nodemon app --host 0.0.0.0",
+    "start": "node --max-old-space-size=4096 app --host 0.0.0.0",
+    "dev": "nodemon --max-old-space-size=4096 app --host 0.0.0.0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
